Removed margin from message indicator to prevent overlap.

--- a/ntc-custom.css
+++ b/ntc-custom.css
@@ -454,3 +454,7 @@ body
 {
     margin-bottom: 0.3em;
 }
+.HLWelcome .UnreadMessages
+{
+    margin-top: 0px;
+}
